style.css
/*
  colors: 
  dark gray: #2E2F32
  blue: #106DC1
  white: #FFFFFF
*/

@font-face {
  font-family: "Moserrat";
  font-weight: bold;
  src: url("assets/fonts/Montserrat/Montserrat-Bold.ttf") format("truetype");
  font-display: swap;
}
@font-face {
  font-family: "Moserrat";
  font-weight: normal;
  src: url("assets/fonts/Montserrat/Montserrat-Regular.ttf") format("truetype");
  font-display: swap;
}

html,
body {
  margin: 0;
  width: 100%;
  height: 100%;
}
body {
  font-family: "Moserrat";
  background-color: #2e2f32;
}

nav {
  background-color: rgba(37, 37, 40, 0.8);
  color: white;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 2;
}

nav .nav-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  height: 80px;
  padding: 0 1rem;
}

.brand img {
  height: 35px;
}

nav .brand {
  font-family: "Staatliches";
}

nav .menu-icon {
  display: none;
  cursor: pointer;
}

.nav-items a {
  margin-right: 1rem;
  color: white;
  font-weight: 300;
}

nav a {
  text-decoration: none;
}

nav.scrolled {
  border-bottom: 1px solid rgba(130, 131, 132, 0.5);
}

.hero {
  position: relative;
  height: 100%;
  min-height: 650px;
  max-height: 900px;
  color: white;
  font-weight: bold;
  background-color: #3b3b3b;
}

.hero .is-desktop {
  width: fit-content;
}

.hero .is-desktop p {
  font-size: 3rem;
  margin: 0;
}

.is-mobile {
  display: none;
}

.hero-title {
  position: absolute;
  left: 5%;
  top: 50%;
  transform: translateY(-50%);
}

.hero-title.center {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.hero .is-mobile .alto-logo {
  height: 110px;
}

.is-mobile {
  display: none;
}

.webp .dark-background {
  background-image: url("./assets/img/dark-background.webp");
}

.no-webp .dark-background {
  background-image: url("./assets/img/dark-background.png");
}

.dark-background {
  background-size: cover;
  background-repeat: no-repeat;
  color: white;
}

.white-background {
  background-color: white;
  color: #2e2f32;
}

.webp .screen-background {
  background-image: url("./assets/img/screen-background.webp");
}

.no-webp .screen-background {
  background-image: url("./assets/img/screen-background.jpg");
}

.screen-background {
  background-size: cover;
  color: white;
}

.section-container {
  padding: 6% 3%;
}

.section-title {
  font-size: 3rem;
  font-weight: bold;
}

.section-title p {
  margin: 0;
}

.section-title .border-bottom {
  background-color: #106dc1;
  height: 10px;
  width: 40%;
  margin-top: 25px;
}

.description-section {
  padding: 5%;
  position: relative;
  border: 1px solid;
}

.description-section p,
.description-section ul {
  z-index: 1;
  position: relative;
}

.description-section::before,
.description-section::after {
  content: "";
  display: block;
  position: absolute;
  background: #2e2f32;
}

.white-description-background:before,
.white-description-background::after {
  background: #ffffff;
}

.trans-description-background {
  border: none;
}

.trans-description-background:before,
.trans-description-background::after {
  background: transparent;
}

.description-section::before {
  top: -0.3em;
  bottom: -0.3em;
  left: 1em;
  right: 1em;
}

.description-section::after {
  left: -0.3em;
  right: -0.3em;
  top: 1em;
  bottom: 1em;
}

.icons > div {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.team-img > div {
  display: flex;
  justify-content: center;
}

.step {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.step .number {
  border-radius: 50%;
  animation: border-animate 1.6s linear 0s infinite alternate;
  background-color: white;
  border-width: 8px;
  border-style: solid;
  height: 80px;
  width: 80px;
  display: flex;
  justify-content: center;
  align-items: center;
  color: black;
  font-weight: bold;
}

.contact-section {
  background-color: #ffffff;
}

.contact-icon {
  width: 45px;
  height: 45px;
  background-color: black;
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 10px;
  margin-top: 15px;
  padding: 5px;
}

.contact-icon img {
  width: 35px;
  height: 35px;
}

.phone {
  height: 380px;
  width: 304px;
}

#particles-js canvas {
  opacity: 0.3;
}

@keyframes example {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

#toggle-line {
  animation-name: example;
  animation-duration: 0.6s;
  animation-iteration-count: infinite;
}

@media (max-width: 768px) {
  nav div {
    display: none;
  }
  nav .menu-icon {
    display: block;
  }
  .section.tiers .prices {
    flex-direction: column;
  }
  .section.tiers .prices div {
    border-radius: 0;
  }

  .brand img {
    display: none;
  }

  .nav-items {
    position: fixed;
    top: 5rem;
    left: -100%;
    display: flex;
    flex-direction: column;
    background-color: #2e2f32;
    width: 100%;
    padding: 1rem 0;
    text-align: center;
    transition: 0.3s;
    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
    border-bottom: 1px solid rgba(130, 131, 132, 0.5);
  }
  .nav-items *:not(:last-child) {
    margin-bottom: 10px;
  }
  .nav-items.active {
    left: 0;
  }

  .description-section {
    padding: 1rem;
    border: unset;
    margin-left: unset;
    margin-top: 10px;
  }
  .is-desktop {
    display: none;
  }

  .is-mobile {
    display: flex;
  }

  .hero .is-mobile {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .hero .is-mobile .alto-logo {
    height: 110px;
  }

  .hero .is-mobile p {
    font-size: 1.5rem;
    width: 290px;
    margin-top: 30px;
  }
}

@keyframes border-animate {
  0% {
    border-top-color: transparent;
    border-right-color: transparent;
    border-bottom-color: transparent;
    border-left-color: transparent;
  }

  25% {
    border-top-color: rgb(17, 98, 185);
    border-right-color: transparent;
    border-bottom-color: transparent;
    border-left-color: transparent;
  }

  50% {
    border-top-color: rgb(17, 98, 185);
    border-right-color: rgb(17, 98, 185);
    border-bottom-color: transparent;
    border-left-color: transparent;
  }

  75% {
    border-top-color: rgb(17, 98, 185);
    border-right-color: rgb(17, 98, 185);
    border-bottom-color: rgb(17, 98, 185);
    border-left-color: transparent;
  }

  100% {
    border-top-color: rgb(17, 98, 185);
    border-right-color: rgb(17, 98, 185);
    border-bottom-color: brgb(17, 98, 185) lue;
    border-left-color: rgb(17, 98, 185);
  }
}

